resources/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petstore
---
apiVersion: v1
kind: Service
metadata:
  name: petstore
  namespace: petstore
spec:
  ports:
    - name: http-port
      port: 8080
      targetPort: http-port
      protocol: TCP
  selector:
    app: petstore     
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstore
  namespace: petstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petstore
  template:
    metadata:
      labels:
        app: petstore
    spec:
      containers:
      - name: petstore
        image: quay.io/kuadrant/petstore3:1.0.5
        imagePullPolicy: Always
        ports:
          - name: http-port
            containerPort: 8080
            protocol: TCP
        volumeMounts:
        - name: log-volume
          mountPath: /var/log
      volumes:
      - name: log-volume
        emptyDir:
          medium: Memory
          sizeLimit: "64Mi"
