resources/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: petstore-route
  namespace: petstore
spec:
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: petstore
          namespace: petstore
          port: 8080
